manifists/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: 1701002/todos-frontend:v1.03
          ports:
            - containerPort: 5173
          volumeMounts:
            - name: shared-img
              mountPath: /usr/src/app/dist/shared
        - name: image-container
          image: 1701002/image-finder:v1.03
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: shared-img
              mountPath: /usr/src/app/shared
      volumes:
        - name: shared-img
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5173
